Added last modified and footer

--- a/ishaBot/templates/editFile.html
+++ b/ishaBot/templates/editFile.html
@@ -29,6 +29,16 @@
       .pullDownRight{
         margin-top: 6%;
       }
+
+            .footer {
+          position: fixed;
+          left: 0;
+          bottom: 0;
+          width: 100%;
+          background-color: black;
+          color: white;
+          text-align: center;
+      }
     </style>
    </head>
    <body>
@@ -87,6 +97,11 @@
 
       </div>
     </div>
+
+      <div class="footer">
+        <p>Made with <span style="color: #e25555;">&hearts;</span> and gratitude _/\_</p>
+        <p>In case of any issues using BOT , whatsapp @9424685150</p>
+      </div>
 
     </body>
     </html>
