--- a/ishaBot/templates/result.html
+++ b/ishaBot/templates/result.html
@@ -11,6 +11,18 @@
 		<!-- Latest compiled JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
+		<style type="text/css">
+				.footer {
+			    position: relative;
+			    left: 0;
+			    bottom: 0;
+			    width: 100%;
+			    background-color: black;
+			    color: white;
+			    text-align: center;
+			}
+		</style>
+
    </head>
 
    <body> 
@@ -56,6 +68,11 @@
 		    </tbody>
 		  </table>
 	  	</div>
+
+		<div class="footer">
+			<p>Made with <span style="color: #e25555;">&hearts;</span> and gratitude _/\_</p>
+			<p>In case of any issues using BOT , whatsapp @9424685150</p>
+		</div>
 	</div> 
    </body>
 </html>
