--- a/ishaBot/templates/login.html
+++ b/ishaBot/templates/login.html
@@ -29,6 +29,16 @@
       .pullDownRight{
         margin-top: 40%;
       }
+
+            .footer {
+          position: fixed;
+          left: 0;
+          bottom: 0;
+          width: 100%;
+          background-color: black;
+          color: white;
+          text-align: center;
+      }
     </style>
    </head>
    <body>
@@ -64,3 +74,9 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
     </div>
+      <div class="footer">
+    <p>Made with <span style="color: #e25555;">&hearts;</span> and gratitude _/\_</p>
+    <p>In case of any issues using BOT , whatsapp @9424685150</p>
+  </div>
+    </body>
+    </html>
